--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
             <div class="tips_and_timer_container">
                 <div class="tips_container">
                     <button type="button" class="friends_help" id="friendsHelp"></button>
-                    <button class="fifty_fifty">50:50</button>
-                    <button class="audience_help"></button>
-                    <!-- <button class="x2">x2</button> -->
+                    <button type="button" class="fifty_fifty" id="fiftyFifty">50:50</button>
+                    <button type="button" class="audience_help" id="audienceHelp"></button>
                 </div>
                 <div class="timer_container">
                     <div class="timer_text" id="countdown"></div>
